fix(图表): 带子维度的图表类型时间维度下钻路径显示错误